--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "3",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
@@ -13,6 +14,7 @@
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "store": "^2.0.12"
