--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "store": "^2.0.12"
+    "react-scripts": "^2.0.5",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.4.1"
   },
   "scripts": {
     "precommit": "lint-staged",
@@ -35,5 +37,11 @@
       "prettier --single-quote --write",
       "git add"
     ]
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
