--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "auth0-js": "^9.8.0",
+    "auto-bind": "^1.2.1",
     "axios": "^0.18.0",
     "bootstrap": "3",
     "husky": "^0.14.3",
@@ -16,6 +17,7 @@
     "react-beautiful-dnd": "^9.0.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-modal": "^3.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
